src/assets/style/vars.scss
:root {
  --body-color: hsla(0,0%,0%,0.8);
  --primary-color: #00A672;
  --primary-color-dark: #00835C;
  --header-height: 58px;
  --bg: #FFF;
  --bg-secondary: #f3f5f4;
  --bg-transparent: rgba(255,255,255,.9);
  --bg-teritary: #f3f5f4;
  --dark-bg: #0d2538;
  --code-bg: #0b1928;
  --select-color: rgba(212,53,159,.2);
  --inline-code-text: #b32585;
  --inline-code-bg: rgba(212,53,159,.03);
  --border-color: #e2ecec;
  --border-color-darker: #cfe6e6;
  --mark-color: #fff8ec;
  --border-radius: 5px;
  --success-bg: #5bb19640;
  --space: 25px;
  --space-x2: 50px;
  --code-color: #fdf9f3;
  --glow: 2px 2px 15px 0 var(--success-bg);
}

@media screen and (max-width: 550px) {
  :root {
    --space: 20px;
    --space-x2: 20px;
  }
}

:root [data-theme="dark"] {
  --body-color: #ebf4f1;
  --bg: #06121c;
  --bg-secondary: #030b12;
  --bg-teritary: #091c2b;
  --bg-transparent: rgba(6,18,28,.9);
  --border-color: #0d2538;
  --border-color-darker: #0d2538;
  --inline-code-text: #e24cb2;
  --inline-code-bg: rgba(212,53,159,.1);
  --primary-color: #00835C;
  --primary-color-dark: #00A672;
  --glow: 2px 2px 15px 0 #000;
}

:root [data-theme="sepia"]   {
  --body-color: #5F4B32;
  --bg: #f1e7d0;
  --dark-bg: #111;
  --code-bg: #222;
  --bg-transparent: #f1e7d0E1;
  --bg-secondary: #eae0c9;
  --bg-teritary: #eadec2;
  --border-color: #ded0bf;
  --border-color-darker: #ccbca9;
}

